# langchain-superlocalmemory

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
langchain_superlocalmemory/: __init__.py  chat_history.py  retriever.py
tests/: test_chat_history.py  test_retriever.py
