[project]
name = "langchain-superlocalmemory"
version = "0.1.0"
description = "SuperLocalMemory V3 integration for LangChain — local-first AI memory with mathematical foundations"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Varun Pratap Bhardwaj", email = "admin@superlocalmemory.com"},
]
keywords = [
    "langchain", "ai-memory", "chat-history", "mcp-server",
    "local-first", "agent-memory", "information-geometry", "qualixar",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain-core>=0.3.0,<1.0",
    "superlocalmemory>=3.0.14",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
]

[project.urls]
Homepage = "https://superlocalmemory.com"
Repository = "https://github.com/qualixar/langchain-superlocalmemory"
Documentation = "https://github.com/qualixar/superlocalmemory/wiki"
Paper = "https://arxiv.org/abs/2603.14588"
Author = "https://varunpratap.com"
Qualixar = "https://qualixar.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langchain_superlocalmemory"]

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --tb=short -q"
timeout = 30

[tool.ruff.lint]
select = ["E", "F", "I", "T201"]

[tool.mypy]
disallow_untyped_defs = true
